# STM32G474_template_lab

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
device/: STM32G474RETX_FLASH.ld  STM32G474xx.svd
inc/: main.h  rcc.h
src/: main.c  rcc.c
